--- a/libraryCore/src/main/res/anim/dialog_push_up_in.xml
+++ b/libraryCore/src/main/res/anim/dialog_push_up_in.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-            android:duration="@integer/dialog_animation_time"
+            android:duration="150"
             android:fromYDelta="100%p"
             android:toYDelta="0"/>
     <alpha
-            android:duration="@integer/dialog_animation_time"
+            android:duration="150"
             android:fromAlpha="0.0"
             android:toAlpha="1.0"/>
 </set>
