将网络等非架构模块移除Core层

--- a/libraryframework/src/main/res/values/msv_attrs.xml
+++ b/libraryframework/src/main/res/values/msv_attrs.xml
@@ -5,6 +5,7 @@
         <attr name="msv_loadingView" format="reference" />
         <attr name="msv_emptyView" format="reference" />
         <attr name="msv_errorView" format="reference" />
+        <attr name="msv_otherView" format="reference" />
         <attr name="msv_viewState" format="enum">
             <enum name="content" value="0" />
             <enum name="error" value="1" />
